--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="your-logo.png" alt="Logo" class="logo">
+        <img src="1200px-Google_Play_Console_Logo_(2023).svg.png" alt="Logo" class="logo">
         <h1 class="title">SELL GOOGLE CONSOLE</h1>
     </header>
 
