--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="main-content">
         <div class="container">
             <h2>Login</h2>
-            <input type="email" id="email" placeholder="gmail" required>
+            <input type="email" id="email" placeholder="Gmail" required>
             <input type="password" id="password" placeholder="Password" required>
             <button class="btn" onclick="login()">Log In</button>
             <div class="loading">Loading...</div>
